--- a/style.css
+++ b/style.css
@@ -1,35 +1,56 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 header {
-    background-color: #3C3A39;
-    padding: 12px 24px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  background-color: #3C3A39;
+  padding: 12px 24px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 #logo {
-    font-family: 'Roboto', sans-serif;
-    font-size: 18px;
-    color: #fff;
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  color: #fff;
 }
 #menu-button {
-    background: url(images/Icons/Union.png) no-repeat center center/cover;
-    width: 18px;
-    height: 12px;
+  background: url(images/Icons/Union.png) no-repeat center center/cover;
+  width: 18px;
+  height: 12px;
 }
 .social-icons{
-    border: 2px solid rgb(255, 255, 255);
-    width: 150px;
-    height: 20px;
+  width: 150px;
+  height: 20px;
+  background: url(images/Icons/social.png) no-repeat center center/cover;
 }
 #intro{
-    background-color: #1C1A19;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  background-color: #1C1A19;
+  height: 80vh;
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+#intro-content h1 {
+  color: #FF6B00;
+  font-size: 3.5rem;
+  font-family: 'Crete Round', serif;
+  margin-bottom: 12px;
+}
+#intro-content h3 {
+  color: #FFF;
+  font-size: 1.8rem;
+  font-family: 'Roboto', sans-serif;
+  margin-bottom: 12px;
+}
+#intro-content p {
+  color: #FFF;
+  font-size: 1rem;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+#intro-content {
+  margin-bottom: 12px;
 }
