--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 header {
-  background-color: #3C3A39;
+  background-color: #3c3a39;
   padding: 12px 24px;
   display: flex;
   justify-content: space-between;
@@ -16,59 +16,71 @@ header {
   font-size: 18px;
   color: #fff;
 }
+
 #menu-button {
   background: url(images/Icons/Union.png) no-repeat center center/cover;
   width: 18px;
   height: 12px;
 }
+
 .social-icons {
   width: 150px;
   height: 20px;
   display: flex;
 }
 #intro {
-  background-color: #1C1A19;
+  background-color: #1c1a19;
   height: 80vh;
   padding: 24px;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
+
 #intro-content h1 {
-  color: #FF6B00;
+  color: #ff6b00;
   font-size: 3.5rem;
   font-family: 'Crete Round', serif;
   margin-bottom: 12px;
 }
+
 #intro-content h3 {
-  color: #FFF;
+  color: #fff;
   font-size: 1.8rem;
   font-family: 'Roboto', sans-serif;
   margin-bottom: 12px;
 }
+
 #intro-content p {
-  color: #FFF;
+  color: #fff;
   font-size: 1rem;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 #intro-content {
   margin-bottom: 12px;
 }
-social-icons a {
+
+.social-icons a {
   display: block;
 }
+
 #medium {
   background: url(images/Icons/social/medium.png) no-repeat center center/cover;
 }
+
 #twitter {
   background: url(images/Icons/social/twitter.png) no-repeat center center/cover;
 }
+
 #logo {
   background: url(images/Icons/social/logo.png) no-repeat center center/cover;
 }
+
 #linkedin {
   background: url(images/Icons/social/linkedin.png) no-repeat center center/cover;
 }
+
 #github {
   background: url(images/Icons/social/github.png) no-repeat center center/cover;
 }
