--- a/style.css
+++ b/style.css
@@ -47,9 +47,23 @@ header {
   background-color: #1c1a19;
   height: 80vh;
   padding: 24px;
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+#intro::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: url(images/Illustration.png) no-repeat center center/cover;
+  background-size: 184px 440px;
+  top: 17vh;
+  left: 27vw;
+  z-index: 1;
 }
 
 #intro-content h1 {
@@ -70,10 +84,12 @@ header {
   color: #fff;
   font-size: 1rem;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-shadow: -1px 1px 1px black;
 }
 
 #intro-content {
   margin-bottom: 12px;
+  z-index: 2;
 }
 
 .social-icons a {
