--- a/style.css
+++ b/style.css
@@ -115,3 +115,77 @@ header {
 #github {
   background: url(images/Icons/social/github.png) no-repeat center center/cover;
 }
+
+/* ==============================================================================================  */
+/* =========================================================================================== */
+
+.first-card {
+  width: 327px;
+  height: 550px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.image {
+  width: 295px;
+  height: 237px;
+  background: #FF6B00;
+}
+
+.content h1 {
+  color: #091E42;
+}
+
+.content {
+  width: 295px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-around;
+  flex: 1;
+}
+
+.languages {
+  list-style: none;
+  display: flex;
+  gap: 0 5px;
+  font-size: 15px;
+  font-weight: 500;
+  padding: 0;
+}
+
+.languages li {
+  border: 1px solid #8993A4;
+  padding: 10px 12px;
+}
+
+.languages li:hover {
+  border: 1px solid #677182;
+}
+
+#see-project-button-first {
+  border: 1px solid transparent;
+  padding: 12px;
+  font-size: 17px;
+  font-weight: 700;
+  background-color: #FF6B00;
+  color: #fff;
+}
+
+#see-project-button-first:hover{
+  border: 1px solid #F55800;
+  background-color: #FFF5E1;
+  color: #F55800;
+}
+
+#see-project-button-first:active{
+  background-color: #E05304;
+  color: #F4F1F0;
+}
+
+#see-project-button-first:disabled {
+  border: 1px solid transparent;
+  color: #5B5957;
+  background-color: #F4F1F0;
+}
