--- a/style.css
+++ b/style.css
@@ -46,6 +46,23 @@ header {
   list-style: none;
 }
 
+.languages li {
+  border: 1px solid #8993a4;
+  padding: 10px 12px;
+  background-color: #ffffff3a;
+  font-family: 'Inter', sans-serif;
+}
+
+.other-cards-info li {
+  border: 1px solid transparent;
+  padding: 10px 12px;
+  background-color: #ffffff3a;
+}
+
+.about-section-content li {
+  font-size: 22px;
+}
+
 .social-icons ul li {
   display: block;
   width: 40px;
@@ -72,7 +89,18 @@ header {
   background-size: 184px 440px;
   top: 17vh;
   left: 27vw;
-  z-index: 1;  
+  z-index: 1;
+}
+
+.content-one h1 {
+  color: #091e42;
+  font-weight: 100;
+  font-size: 32px;
+}
+
+.content h1 {
+  font-size: 32px;
+  font-weight: 100;
 }
 
 #intro-content h1 {
@@ -161,12 +189,6 @@ header {
   align-items: center;
 }
 
-.content-one h1 {
-  color: #091e42;
-  font-weight: 100;
-  font-size: 32px;
-}
-
 .content-one {
   width: 295px;
   display: flex;
@@ -183,13 +205,6 @@ header {
   font-size: 15px;
   font-weight: 500;
   padding: 0;
-}
-
-.languages li {
-  border: 1px solid #8993a4;
-  padding: 10px 12px;
-  background-color: #ffffff3a;
-  font-family: 'Inter', sans-serif;
 }
 
 .languages li:hover {
@@ -245,17 +260,6 @@ header {
   flex: 1;
 }
 
-.content h1 {
-  font-size: 32px;
-  font-weight: 100;
-}
-
-.other-cards-info li {
-  border: 1px solid transparent;
-  padding: 10px 12px;
-  background-color: #ffffff3a;
-}
-
 .see-project-button {
   border: 1px solid transparent;
   line-height: 24px;
@@ -302,10 +306,10 @@ header {
 }
 
 .horizontal-seperator-on-dark {
-  border: .5px solid #f5f5f5;
+  border: 1px solid #f5f5f5;
   border-radius: 5px;
   margin: 24px 24px 80px;
-} 
+}
 
 #about-me p {
   color: #fff;
@@ -355,10 +359,6 @@ h2 {
   flex-direction: column;
   align-items: center;
   gap: 32px 0;
-}
-
-.about-section-content li {
-  font-size: 22px;
 }
 
 .language-section {
