--- a/style.css
+++ b/style.css
@@ -411,6 +411,13 @@ h2 {
   align-self: flex-end;
 }
 
+#contact-me {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 70px 0;
+}
+
 #contact-me p {
   margin-top: 120px;
   font-family: "Inter", sans-serif;
@@ -419,4 +426,13 @@ h2 {
   line-height: 44px;
   text-align: center;
   color: #172b4d;
+}
+
+form ul li {
+  list-style: none;
+}
+
+#contact-me form ul {
+  display: flex;
+  flex-direction: column;
 }
