--- a/media.css
+++ b/media.css
@@ -108,6 +108,44 @@
     .content p {
         font-size: 17px;
     }
+
+    #about-me {
+        overflow: hidden;
+        background: #262626;
+    }
+
+    .about-me-heading {
+        align-self: flex-start;
+    }
+
+    .about-me-introduction {
+        z-index: 1;
+    }
+
+    .about-me-introduction-content {
+        margin: 0 80px;
+        width: 60%;
+    }
+
+    .about-me-introduction-content p {
+        text-shadow: -1px 1px 1px black;
+    }
+
+    .background-graphic {
+        display: none;
+    }
+
+    #about-me::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: url(images/about-section-illustration-desktop.svg) no-repeat;
+        background-size: 500px 359px;
+        background-position: top right;
+        top: 5vh;
+        left: 9vw;
+    }
 }
 
 @media screen and (min-width: 1500px) {
@@ -130,5 +168,22 @@
     .cards {
         width: 369px;
         height: 435px;
+    }
+
+    .about-me-introduction-content {
+        margin: 0 140px;
+        width: 40%;
+    }
+
+    #about-me::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: url(images/about-section-illustration-desktop.svg) no-repeat;
+        background-size: 672px 359px;
+        background-position: top right;
+        top: 5vh;
+        left: 9vw;
     }
 }
