--- a/media.css
+++ b/media.css
@@ -1,234 +1,234 @@
 @media screen and (min-width: 768px) {
-    #intro {
-        flex-direction: row;
-        justify-content: flex-start;
-        align-items: center;
-        gap: 0 70px;
-    }
+  #intro {
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 0 70px;
+  }
 
-    #intro::after {
-        background: url(images/illustration-desktop.svg) no-repeat right top/cover;
-        background-size: 380px 500px;
-        top: 0;
-    }
+  #intro::after {
+    background: url(images/illustration-desktop.svg) no-repeat right top/cover;
+    background-size: 380px 500px;
+    top: 0;
+  }
 
-    #intro-content {
-        order: 2;
-        width: 50%;
-    }
-    
-    .intro-icons {
-        flex-direction: column-reverse;
-    }
+  #intro-content {
+    order: 2;
+    width: 50%;
+  }
 
-    #intro-content h1 {
-        font-size: 72px;
-        line-height: 81px;
-    }
+  .intro-icons {
+    flex-direction: column-reverse;
+  }
 
-    .work-card-container {
-        grid-template-columns: auto auto;
-        grid-gap: 24px;
-    }
+  #intro-content h1 {
+    font-size: 72px;
+    line-height: 81px;
+  }
 
-    .first-card {
-        grid-area: 1/1/2/3;
-        flex-direction: row;
-        gap: 0 24px;
-        align-items: flex-start;
-    }
+  .work-card-container {
+    grid-template-columns: auto auto;
+    grid-gap: 24px;
+  }
+
+  .first-card {
+    grid-area: 1/1/2/3;
+    flex-direction: row;
+    gap: 0 24px;
+    align-items: flex-start;
+  }
 }
 
 @media screen and (min-width: 1024px) {
-    P {
-        font-weight: 400;
-        font-size: 20px;
+  p {
+    font-weight: 400;
+    font-size: 20px;
+  }
+
+  .heading-and-seperator {
+    align-items: center;
+    display: flex;
+    margin: 130px 150px;
+    gap: 0 25px;
+  }
+
+  .heading-and-seperator h1 {
+    margin: 0;
+  }
+
+  .heading-and-seperator hr {
+    margin: 0;
+    width: 65%;
+  }
+
+  header {
+    padding: 25px 100px;
+  }
+
+  #menu-button {
+    display: none;
+  }
+
+  #main-nav {
+    display: block;
+  }
+
+  #intro-content {
+    width: 40%;
+  }
+
+  #intro::after {
+    background-size: 620px 676px;
+  }
+
+  .work-card-container {
+    grid-template-columns: auto auto auto;
+    grid-gap: 24px;
+  }
+
+  .first-card {
+    grid-area: 1/1/3/4;
+    flex-direction: row;
+    gap: 0 24px;
+  }
+
+  #first-work-image {
+    display: none;
+  }
+
+  #first-work-image-desktop {
+    display: block;
+  }
+
+  .content-one h1 {
+    font-size: 40px;
+    font-weight: 400;
+  }
+
+  .content p {
+    font-size: 17px;
+  }
+
+  #about-me {
+    overflow: hidden;
+    background: #262626;
+  }
+
+  .about-me-heading {
+    align-self: flex-start;
+  }
+
+  .about-me-introduction {
+    z-index: 1;
+  }
+
+  .about-me-introduction-content {
+    margin: 0 80px;
+    width: 60%;
+  }
+
+  .about-me-introduction-content p {
+    text-shadow: -1px 1px 1px black;
+  }
+
+  .background-graphic {
+    display: none;
+  }
+
+  #about-me::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url(images/about-section-illustration-desktop.svg) no-repeat;
+    background-size: 500px 359px;
+    background-position: top right;
+    top: 5vh;
+    left: 9vw;
     }
 
-    .heading-and-seperator{
-      align-items: center;
-      display: flex;
-      margin: 130px 150px;
-      gap: 0 25px;
-    }
+  .about-myself {
+    flex-direction: row;
+    justify-content: center;
+    gap: 0 10rem;
+    z-index: 1;
+  }
 
-    .heading-and-seperator h1 {
-        margin: 0;
-    }
+  .about-section-content {
+    align-items: flex-start;
+  }
 
-    .heading-and-seperator hr {
-        margin: 0;
-        width: 65%;
-    }
+  .end-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-gap: 0 24px;
+    margin: 0 50px;
+  }
 
-    header {
-        padding: 25px 100px;
-    }
+  .end-wrapper div {
+    height: 100%;
+  }
 
-    #menu-button {
-        display: none;
-    }
+  #contact-me h2 {
+    margin: 0;
+    text-align: left;
+    font-size: 40px;
+    line-height: 55px;
+  }
 
-    #main-nav {
-        display: block;
-    }
-    
-    #intro-content {
-        width: 40%;
-    }
+  #contact-me {
+    padding-top: 130px;
+  }
 
-    #intro::after {
-        background-size: 620px 676px;
-    }
-
-    .work-card-container {
-        grid-template-columns: auto auto auto;
-        grid-gap: 24px;
-    }
-
-    .first-card {
-        grid-area: 1/1/3/4;
-        flex-direction: row;
-        gap: 0 24px;
-    }
-
-    #first-work-image {
-        display: none;
-    }
-
-    #first-work-image-desktop {
-        display: block;
-    }
-
-    .content-one h1 {
-        font-size: 40px;
-        font-weight: 400;
-    }
-
-    .content p {
-        font-size: 17px;
-    }
-
-    #about-me {
-        overflow: hidden;
-        background: #262626;
-    }
-
-    .about-me-heading {
-        align-self: flex-start;
-    }
-
-    .about-me-introduction {
-        z-index: 1;
-    }
-
-    .about-me-introduction-content {
-        margin: 0 80px;
-        width: 60%;
-    }
-
-    .about-me-introduction-content p {
-        text-shadow: -1px 1px 1px black;
-    }
-
-    .background-graphic {
-        display: none;
-    }
-
-    #about-me::after {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background: url(images/about-section-illustration-desktop.svg) no-repeat;
-        background-size: 500px 359px;
-        background-position: top right;
-        top: 5vh;
-        left: 9vw;
-    }
-
-    .about-myself {
-        flex-direction: row;
-        justify-content: center;
-        gap: 0 10rem;
-        z-index: 1;
-    }
-
-    .about-section-content {
-        align-items: flex-start;
-    }
-
-    .end-wrapper {
-        display: grid;
-        grid-template-columns: 1fr 2fr;
-        grid-gap: 0 24px;
-        margin: 0 50px;
-    }
-
-    .end-wrapper div {
-        height: 100%;
-    }
-
-    #contact-me h2 {
-        margin: 0;
-        text-align: left;
-        font-size: 40px;
-        line-height: 55px;
-    }
-
-    #contact-me {
-        padding-top: 130px;
-    }
-
-    form ul .btn {
-        align-self: flex-start;
-    }
+  form ul .btn {
+    align-self: flex-start;
+  }
 }
 
 @media screen and (min-width: 1500px) {
-    header {
-        padding: 25px 155px;
-    }
-    
-    #intro-content {
-        width: 30%;
-    }
+  header {
+    padding: 25px 155px;
+  }
 
-    #intro::after {
-        background-size: 800px 760px;
-    }
+  #intro-content {
+    width: 30%;
+  }
 
-    .content-one {
-        width: 448px;
-    }
+  #intro::after {
+    background-size: 800px 760px;
+  }
 
-    .cards {
-        width: 369px;
-        height: 435px;
-    }
+  .content-one {
+    width: 448px;
+  }
 
-    .about-me-introduction-content {
+  .cards {
+    width: 369px;
+    height: 435px;
+  }
+
+  .about-me-introduction-content {
         margin: 0 140px;
         width: 40%;
-    }
+  }
 
-    #about-me::after {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background: url(images/about-section-illustration-desktop.svg) no-repeat;
-        background-size: 672px 359px;
-        background-position: top right;
-        top: 5vh;
-        left: 0;
-    }
+  #about-me::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url(images/about-section-illustration-desktop.svg) no-repeat;
+    background-size: 672px 359px;
+    background-position: top right;
+    top: 5vh;
+    left: 0;
+  }
 
-    .about-myself {
-        gap: 0 25rem;
-    }
+  .about-myself {
+    gap: 0 25rem;
+  }
 
-    .end-wrapper {
-        margin: 0 135px;
-    }
+  .end-wrapper {
+    margin: 0 135px;
+  }
 }
