--- a/style.css
+++ b/style.css
@@ -3,6 +3,19 @@
   padding: 0;
 }
 
+/* Animation  */
+
+header a {
+  animation-name: rotate;
+  animation-duration: 2s;
+}
+
+@keyframes rotate {
+  from {transform: rotate(0deg);}
+  to {transform: rotate(360deg);}
+}
+
+
 p {
   font-family: "Inter", sans-serif;
   line-height: 24px;
